# paste

./: .gitignore  .readthedocs.yml  LICENSE  README.md  Tutorial.ipynb  paste-cmd-line.py  paste.py  readthedocs.yml  requirements.txt  setup.cfg  sinfo-requirements.txt
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.md  requirements.txt  tutorial.rst
docs/source/notebooks/: getting-started.ipynb
paste/: PASTE.py  __init__.py
sample_data/: layer2.csv  slice1.csv  slice1_coor.csv  slice1_uniform_weights.csv  slice2_coor.csv  slice2_uniform_weights.csv  slice3.csv  slice3_coor.csv  slice3_uniform_weights.csv  slice4.csv  slice4_coor.csv  slice4_uniform_weights.csv
src/: PASTE.py  STLayer.py  Tutorial.ipynb  __init__.py  helper.py  paste.py
src/paste/: PASTE.py  __init__.py  helper.py  visualization.py
src/paste_bio.egg-info/: PKG-INFO  SOURCES.txt
