[metadata]
name = paste-bio
version = 1.4.0
author = Max Land
author_email = max.ruikang.land@gmail.com
description = A computational method to align and integrate spatial transcriptomics experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphael-group/paste
project_urls =
    Bug Tracker = https://github.com/raphael-group/paste/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src